--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -81,16 +81,16 @@
       <div class="row">
         <!-- Slogan -->
         <div class="col-md-4">
-          <h4 class="logo">EventSphere</h4>
-          <p>Discover and Book your next event with us.</p>
+          <h4 class="logo">OnBook</h4>
+          <p>Rent your next book with us.</p>
         </div>
 
         <!-- Contact -->
         <div class="col-md-4">
           <h4>Contact</h4>
           <ul class="list-unstyled ">
-            <li>Email: eventsphere@example.com</li>
-            <li>Teléfono: +1 234 567 890</li>
+            <li>Email: OnBook@example.com</li>
+            <li>Teléfono: +5 254 567 867</li>
           </ul>
         </div>
 
