--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,10 +1,10 @@
 {% extends 'books/base.html' %}
 {% block content %}
   <h2>{% if object %}Edit Book{% else %}Add a New Book{% endif %}</h2>
-  <form method="post" enctype="multipart/form-data">
+  <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Save Changes</button>
-    <button class="btn btn-outline-secondary" type="button" onclick="history.back()">Back</button>
+    <a href="{% url 'book_list' %}" class="btn btn-outline-secondary">Back</a>
   </form>
 {% endblock %}
