fixing hamburger menu

--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-md bg-primary fixed-top">
       <div class="container">
         <a class="navbar-brand mr-4" href="{% url 'books_home' %}">OnBook</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
           aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
