--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,7 +1,7 @@
 {% extends 'books/base.html' %}
 {% block content %}
   <h2>{% if object %}Edit Book{% else %}Add a New Book{% endif %}</h2>
-  <form method="post">
+  <form enctype="multipart/form-data" method="post">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit" class="btn btn-primary">Save Changes</button>
