--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -1,10 +1,13 @@
 {% extends 'books/base.html' %}
 {% block content %}
-  <h2>{% if object %}Edit Book{% else %}Add a New Book{% endif %}</h2>
-  <form enctype="multipart/form-data" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Save Changes</button>
-    <a href="{% url 'book_list' %}" class="btn btn-outline-secondary">Back</a>
-  </form>
+<h2>{% if object %}Edit Book{% else %}Add a New Book{% endif %}</h2>
+<form method="post" enctype="multipart/form-data">
+  {% csrf_token %}
+  <label for="id_publish_date">Publish Date:</label>
+  {{ form.publish_date }}
+  <small class="form-text text-muted">{{ form.publish_date.help_text }}</small>
+  {{ form.as_p }}
+  <button type="submit" class="btn btn-primary">Save Changes</button>
+  <a href="{% url 'book_list' %}" class="btn btn-outline-secondary">Back</a>
+</form>
 {% endblock %}
