--- a/static/main.css
+++ b/static/main.css
@@ -252,6 +252,18 @@ main{
   
 }
 
+
+/* Table description responsive */
+
+.desc-limited {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+
 /* ------------------------------------------------------------------------- FOOTER -------------------------------------------------------------------------  */
 
 footer {
