--- a/static/main.css
+++ b/static/main.css
@@ -257,9 +257,9 @@ main{
 
 .desc-limited {
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 4;
   -webkit-box-orient: vertical;
-  overflow: hidden;
+  overflow: scroll;
   text-overflow: ellipsis;
 }
 
