fixing books admin

--- a/books/templates/books/book_admin.html
+++ b/books/templates/books/book_admin.html
@@ -11,7 +11,7 @@
   <select name="author">
     <option value="">--Filter by Author--</option>
     {% for author in authors %}
-    <option value="{{ author }}" {% if request.GET.author==author %}selected{% endif %}>{{ author }}</option>
+    <option value="{{ author }}" {% if request.GET.author == author %}selected{% endif %}>{{ author }}</option>
     {% endfor %}
   </select>
 
@@ -19,8 +19,7 @@
   <select name="publisher">
     <option value="">--Filter by Publisher--</option>
     {% for publisher in publishers %}
-    <option value="{{ publisher }}" {% if request.GET.publisher==publisher %}selected{% endif %}>{{ publisher }}
-    </option>
+    <option value="{{ publisher }}" {% if request.GET.publisher == publisher %}selected{% endif %}>{{ publisher }}</option>
     {% endfor %}
   </select>
 
@@ -28,13 +27,13 @@
   <select name="category">
     <option value="">--Filter by Category--</option>
     {% for category, category_display in categories.items %}
-    <option value="{{ category }}" {% if request.GET.category==category %}selected{% endif %}>{{ category_display }}
-    </option>
+    <option value="{{ category }}" {% if request.GET.category == category %}selected{% endif %}>{{ category_display }}</option>
     {% endfor %}
   </select>
 
   <button type="submit" class="btn btn-primary">Search</button>
 </form>
+
 
 
 <!-- Add New Book Button -->
