--- a/books/templates/books/book_form.html
+++ b/books/templates/books/book_form.html
@@ -41,9 +41,10 @@
   <select name="category" id="id_category" class="form-control">
     <option value="">--Select the most fitting category for the book--</option>
     {% for value, display in form.fields.category.choices %}
-    <option value="{{ value }}" {% if form.category.value==value %}selected{% endif %}>{{ display }}</option>
+    <option value="{{ value }}" {% ifequal form.category.value value %}selected{% endifequal %}>{{ display }}</option>
     {% endfor %}
   </select>
+
 
   <!-- Description Field -->
   <label for="id_description">Description:</label>
