--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -4,20 +4,21 @@
 <!-- Search and Filter Form -->
 <form method="get" action="{% url 'book_list' %}">
   <input type="text" name="q" placeholder="Search for books..." value="{{ request.GET.q }}">
-  
+
   <!-- Dropdown for Authors -->
   <select name="author">
     <option value="">--Filter by Author--</option>
     {% for author in authors %}
-      <option value="{{ author }}" {% if request.GET.author == author %}selected{% endif %}>{{ author }}</option>
+    <option value="{{ author }}" {% if request.GET.author==author %}selected{% endif %}>{{ author }}</option>
     {% endfor %}
   </select>
-  
+
   <!-- Dropdown for Publishers -->
   <select name="publisher">
     <option value="">--Filter by Publisher--</option>
     {% for publisher in publishers %}
-      <option value="{{ publisher }}" {% if request.GET.publisher == publisher %}selected{% endif %}>{{ publisher }}</option>
+    <option value="{{ publisher }}" {% if request.GET.publisher==publisher %}selected{% endif %}>{{ publisher }}
+    </option>
     {% endfor %}
   </select>
 
@@ -25,7 +26,8 @@
   <select name="category">
     <option value="">--Select Category--</option>
     {% for category, category_display in categories.items %}
-      <option value="{{ category }}" {% if request.GET.category == category %}selected{% endif %}>{{ category_display }}</option>
+    <option value="{{ category }}" {% if request.GET.category==category %}selected{% endif %}>{{ category_display }}
+    </option>
     {% endfor %}
   </select>
 
@@ -36,53 +38,54 @@
 <div>
   <h2>Manage Books</h2>
   <div class="table-responsive">
-    <table class="table">
+    <table class="table table-bordered">
       <thead>
-          <tr>
-              <th>Cover</th>
-              <th>Book Name</th>
-              <th>Author</th>
-              <th>Publisher</th>
-              <th>Publish Date</th>
-              <th>Language</th>
-              <th>Category</th>
-              <th>Description</th>
-              <th>Disponibility</th>
-              <th>Actions</th>
-          </tr>
+        <tr>
+          <th>Cover</th>
+          <th>Book Name</th>
+          <th>Author</th>
+          <th>Publisher</th>
+          <th>Publish Date</th>
+          <th>Language</th>
+          <th>Category</th>
+          <th>Description</th>
+          <th>Disponibility</th>
+          <th>Actions</th>
+        </tr>
       </thead>
       <tbody>
-          {% for book in books %}
-          <tr>
-              <td>
-                  {% if book.cover_image %}
-                  <img src="{{ book.cover_image.url }}" alt="{{ book.name }}"
-                      style="max-height: 100px; max-width: 100px;">
-                  {% else %}
-                  <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image"
-                      style="max-height: 100px; max-width: 100px;">
-                  {% endif %}
-              </td>
-              <td>{{ book.name }}</td>
-              <td>{{ book.author }}</td>
-              <td>{{ book.publisher }}</td>
-              <td>{{ book.publish_date }}</td>
-              <td>{{ book.language }}</td>
-              <td>{{ book.category }}</td>
-              <td class="desc-limited">{{ book.description }}</td>
-              <td>{{ book.is_available }}</td>
-              <td>
-                <a href="{% url 'book_detail' book.id %}" class="btn btn-secondary">View Book</a>
-              </td>
-          </tr>
-          {% empty %}
-          <tr>
-              <td colspan="4">No books available.</td>
-          </tr>
-          {% endfor %}
+        {% for book in books %}
+        <tr>
+          <td class="align-middle">
+            {% if book.cover_image %}
+            <img src="{{ book.cover_image.url }}" alt="{{ book.name }}" class="img-fluid">
+            {% else %}
+            <img src="{% static 'images/book_default.jpg' %}" alt="Default Book Image" class="img-fluid">
+            {% endif %}
+          </td>
+          <td class="align-middle">{{ book.name }}</td>
+          <td class="align-middle">{{ book.author }}</td>
+          <td class="align-middle">{{ book.publisher }}</td>
+          <td class="align-middle">{{ book.publish_date }}</td>
+          <td class="align-middle">{{ book.language }}</td>
+          <td class="align-middle">{{ book.category }}</td>
+          <td class="desc-limited align-middle">
+            <div class="overflow-auto" style="max-height: 150px;">{{ book.description }}</div>
+          </td>
+          <td class="align-middle">{{ book.is_available }}</td>
+          <td class="align-middle">
+            <a href="{% url 'book_detail' book.id %}" class="btn btn-secondary">View Book</a>
+          </td>
+        </tr>
+        {% empty %}
+        <tr>
+          <td colspan="4">No books available.</td>
+        </tr>
+        {% endfor %}
       </tbody>
-  </table>
+    </table>
   </div>
+
 </div>
 
 <!-- Pagination Links -->
@@ -90,7 +93,8 @@
   <span class="step-links">
     {% if page_obj.has_previous %}
     <a href="?page=1{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">first</a>
-    <a href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
+    <a
+      href="?page={{ page_obj.previous_page_number }}{% if request.GET.q %}&q={{ request.GET.q }}{% endif %}">previous</a>
     {% endif %}
 
     <span class="current">
