--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -47,7 +47,8 @@
             {% endif %}
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
-            <a class="nav-item nav-link" href="{% url 'inbox' %}">Messages</a>
+            <a class="nav-item nav-link" href="{% url 'inbox' %}">
+              <i class="bi bi-envelope-arrow-up-fill">  Inbox</i> </a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
