--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -6,17 +6,16 @@
   <h1>Welcome to OnBook</h1>
   <p>Explore our collection of books and manage your rentals.</p>
 </div>
-
 <div class="container bg-body-secondary mt-4">
   <div class="row">
     <div class="col-lg-4 order-lg-1 p-1">
       <div id="bookCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           {% for book in random_books %}
-          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+          <div class="carousel-item {% if forloop.first %}active{% endif %} carousel-container">
             <!-- Check if book has a cover_image -->
             {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="d-block w-100" alt="{{ book.title }}">
+            <img src="{{ book.cover_image.url }}" class="d-block carousel-image" alt="{{ book.title }}">
             {% else %}
             <!-- Display a default image or leave this space blank if no cover image exists -->
             <img src="{% static 'default_cover_image_path.jpg' %}" class="d-block w-100" alt="Default Image">
