--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -47,8 +47,13 @@
             {% endif %}
             {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+            <a class="nav-item nav-link" href="{% url 'inbox' %}">Inbox</a>
+            {% with unread_messages=user.profile.unread_messages %}
+            {% if unread_messages %}
             <a class="nav-item nav-link" href="{% url 'inbox' %}">
-              <i class="bi bi-envelope-arrow-up-fill"></i> Inbox </a>
+              <i class="bi bi-envelope-arrow-up-fill"></i></a>
+            {% endif %}
+            {% endwith %}
             <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
             {% else %}
             <a class="nav-item nav-link" href="{% url 'login' %}">Login</a>
@@ -118,7 +123,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 
-    <script src="{% static 'js/messages.js' %}"></script>
+  <script src="{% static 'js/messages.js' %}"></script>
 </body>
 
 </html>
