--- a/books/templates/books/book_confirm_delete.html
+++ b/books/templates/books/book_confirm_delete.html
@@ -1,10 +1,17 @@
 {% extends 'books/base.html' %}
 {% block content %}
-  <h2>Eliminar Libro</h2>
-  <p>¿Estás seguro de que quieres eliminar "{{ object.name }}"?</p>
-  <form method="post">
-    {% csrf_token %}
-    <button type="submit" class="btn btn-danger">Eliminar</button>
-    <a href="{% url 'book_list' %}" class="btn btn-secondary">Cancelar</a>
-  </form>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="overlay"></div>
+  <div class="card bg-dark text-white p-4">
+    <h2 class="text-center">Delete Book</h2>
+    <p class="text-center">Are you sure you want to remove "{{ object.name }}"?</p>
+    <form method="post">
+      {% csrf_token %}
+      <div class="text-center">
+        <button type="submit" class="btn btn-danger">Delete</button>
+        <a href="{% url 'book_list' %}" class="btn btn-secondary">Cancel</a>
+      </div>
+    </form>
+  </div>
+</div>
 {% endblock %}
