--- a/static/main.css
+++ b/static/main.css
@@ -231,6 +231,17 @@ main{
 }
 
 
+/* Delete confirmation */
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
 /* ------------------------------------------------------------------------- FOOTER -------------------------------------------------------------------------  */
 
 footer {
