--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -12,11 +12,8 @@
       <div id="bookCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           {% for book in random_books %}
-          <div class="carousel-item {% if forloop.first %}active{% endif %} ">
-            <!-- Check if book has a cover_image -->
-            {% if book.cover_image %}
-            <img src="{{ book.cover_image.url }}" class="d-block" alt="{{ book.title }} " style="max-height: 400px; max-width: 300px;">
-            {% endif %}
+          <div class="carousel-item {% if forloop.first %}active{% endif %}">
+            <img src="{{ book.cover_image.url }}" class="d-block w-100" alt="{{ book.title }}">
           </div>
           {% endfor %}
         </div>
@@ -31,18 +28,20 @@
         </a>
       </div>
     </div>
-    <div class="col-lg-8 order-lg-2">
-      <div class="container">
-        <div class="text-center">
-          <a href="{% url 'book_list' %}" class="btn btn-primary mx-auto my-3">View All Books</a>
-        </div>
-        <div class="mt-md-4">
-          <h2 class="text-center">Discover Our Collection</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
-        </div>
-      </div>
+  </div>
+</div>
+<div class="col-lg-8 order-lg-2">
+  <div class="container">
+    <div class="text-center">
+      <a href="{% url 'book_list' %}" class="btn btn-primary mx-auto my-3">View All Books</a>
+    </div>
+    <div class="mt-md-4">
+      <h2 class="text-center">Discover Our Collection</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
     </div>
   </div>
+</div>
+</div>
 </div>
 
 {% endblock %}
