--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -13,7 +13,8 @@
         <div class="carousel-inner">
           {% for book in random_books %}
           <div class="carousel-item {% if forloop.first %}active{% endif %}">
-            <img src="{{ book.cover_image.url }}" class="d-block w-100" alt="{{ book.title }}">
+            <img src="{{ book.cover_image.url }}" class="d-block w-100" alt="{{ book.title }}"
+              style="max-height: 300px; max-width: 400px;">
           </div>
           {% endfor %}
         </div>
@@ -41,7 +42,4 @@
     </div>
   </div>
 </div>
-</div>
-</div>
-
 {% endblock %}
