--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -7,8 +7,7 @@
   <p>Explore our collection of books and manage your rentals.</p>
 </div>
 <div class="container bg-body-secondary mt-4">
-  <div class="row">
-    <div class="col-lg-4 order-lg-1 p-1">
+    <div class="col-lg-4 p-1">
       <div id="bookCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           {% for book in random_books %}
@@ -28,7 +27,6 @@
         </a>
       </div>
     </div>
-  </div>
 </div>
 <div class="col-lg-8">
   <div class="container">
