--- a/users/templates/users/delete_user.html
+++ b/users/templates/users/delete_user.html
@@ -1,10 +1,17 @@
 {% extends 'books/base.html' %}
 {% block content %}
-    <h2>Eliminar Usuario</h2>
-    <p>¿Estás seguro de que quieres eliminar al usuario "{{ user.username }}"?</p>
-    <form method="POST">
-        {% csrf_token %}
-        <button type="submit" class="btn btn-danger">Eliminar Usuario</button>
-        <a href="{% url 'admin_users' %}" class="btn btn-secondary">Cancelar</a>
+<div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="overlay"></div>
+  <div class="card bg-dark text-white p-4">
+    <h2 class="text-center">Delete User</h2>
+    <p class="text-center">Are you sure you want to delete "{{ user.username }}"?</p>
+    <form method="post">
+      {% csrf_token %}
+      <div class="text-center">
+        <button type="submit" class="btn btn-danger">Delete User</button>
+        <a href="{% url 'admin_users' %}" class="btn btn-secondary">Cancel</a>
+      </div>
     </form>
+  </div>
+</div>
 {% endblock %}
