--- a/static/main.css
+++ b/static/main.css
@@ -77,40 +77,17 @@ main{
   padding-bottom: 6rem; /* Espacio adicional para el footer */
 }
   
-  h1, h2, h3, h4, h5, h6 {
-    color: #444444;
-  }
-  
-  ul {
-    margin: 0;
-  }
-  
-  .bg-steel {
-    background-color: #5f788a;
-  }
-  
-  .site-header .navbar-nav .nav-link {
-    color: #cbd5db;
-  }
-  
-  .site-header .navbar-nav .nav-link:hover {
-    color: #ffffff;
-  }
-  
-  .site-header .navbar-nav .nav-link.active {
-    font-weight: 500;
-  }
   /* Containers */
   .content-section {
-    background: black;
+    background: var(--container-light);
     padding: 10px 20px;
-    border: 2px solid black;
+    border: 2px solid var(--border);
     border-radius: 10px;
     margin-bottom: 20px;
-    color:white
+    color:var(--text-color)
   }
   
-  .article-title {
+  /* .article-title {
     color: #444444;
   }
   
@@ -155,33 +132,25 @@ main{
   
   .account-heading {
     font-size: 2.5rem;
-  }
+  } */
 
   /* Carrousel */
 
-  /* Estilo personalizado para el contenedor del carrousel */
-  #bookCarousel {
-    min-height: 600px; /* Altura mínima de 600px */
-    background-color: #f8f9fa; /* Color de fondo gris */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden; /* Evitar que las imágenes se desborden del contenedor */
-  }
+/* Estilos personalizados para el carrusel */
+#bookCarousel {
+  background-color: #f0f0f0; /* Fondo gris para el contenedor */
+}
 
-  /* Estilo para las imágenes del carrousel */
-  .carousel-inner img {
-    max-height: 100%; /* Ajustar la imagen al 100% de la altura del contenedor */
-    width: auto; /* Mantener el ancho original de la imagen */
-    max-width: 100%; /* Ajustar la imagen al 100% del ancho del contenedor */
-  }
+#bookCarousel .carousel-inner {
+  text-align: center; /* Centrar el contenido */
+}
 
-  /* Estilo para los controles del carrousel */
-  .carousel-control-prev,
-  .carousel-control-next {
-    top: 50%; /* Alinear verticalmente los controles al centro */
-    transform: translateY(-50%);
-  }
+#bookCarousel .carousel-item img {
+  max-width: 100%; /* Asegurarse de que las imágenes no se desborden */
+  margin: 0 auto; /* Centrar horizontalmente las imágenes */
+}
+
+
 /*--------------------------------------------- Messagin app----------------------------------- */
 
   .messages {
