--- a/books/templates/books/home.html
+++ b/books/templates/books/home.html
@@ -1,3 +1,6 @@
+{% extends 'books/base.html' %}
+{% load static %}
+{% block content %}
 <div class="container text-center">
   <h1>Welcome to OnBook</h1>
   <p>Explore our collection of books and manage your rentals.</p>
@@ -41,3 +44,4 @@
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui, ex, ullam voluptas mollitia tempore, quasi magnam eos provident officiis dolor quisquam debitis aut adipisci? Sit mollitia sint eum laboriosam eius?</p>
   </div>
 </div>
+{% endblock %}
