--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -17,7 +17,7 @@
             <a href="{% url 'delete_user' user.id %}" class="btn btn-danger">Delete Account</a>
           </div>
           {% if unread_messages_count > 0 %}
-          <a href="{% url 'messaging:inbox' %}">
+          <a href="{% url 'inbox' %}">
             <i class="bi bi-envelope-arrow-up-fill"></i>
             <span>{{ unread_messages_count }}</span>
           </a>
