--- a/books/templates/books/base.html
+++ b/books/templates/books/base.html
@@ -27,7 +27,7 @@
 
 <body>
   <header class="site-header">
-    <nav class="navbar navbar-expand-md bg-primary fixed-top">
+    <nav class="navbar navbar-expand-md bg-success fixed-top">
       <div class="container">
         <a class="navbar-brand mr-4" href="{% url 'books_home' %}">OnBook</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggle"
