--- a/static/main.css
+++ b/static/main.css
@@ -212,8 +212,72 @@ main{
 
 /* --------------------------------------------------Home */
 
+/* Cards */
 
+.card{
+  position: relative;
+  width: 18.75rem;
+  height: 21.875rem;
+  margin: 1.25rem;
+}
 
+.card .face{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: .625rem;
+  overflow: hidden;
+  transition: .5s;
+}
+
+.card .front{
+  transform: perspective(37.5rem) rotateY(0deg);
+  box-shadow: 0 .3125rem .625rem #000;
+}
+
+.card .front img{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card .back{
+  transform: perspective(37.5rem) rotateY(180deg);
+  background: rgb(3, 35, 54);
+  padding: .9375rem;
+  color: #f3f3f3;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  box-shadow: 0 .3125rem .625rem #000;
+}
+
+.card .back .link{
+  border-top: solid 1px #f3f3f3;
+  height: 3.125rem;
+  line-height: 3.125rem;
+}
+
+.card .back .link a{
+  color: #f3f3f3;
+}
+
+.card .back h3,h4{
+  font-size: 1.875rem;
+  margin-top: 1.25rem;
+  letter-spacing: .125rem;
+}
+
+.card:hover .front{
+  transform: perspective(37.5rem) rotateY(180deg);
+}
+
+.card:hover .back{
+  transform: perspective(37.5rem) rotateY(360deg);
+}
 /* Table description responsive */
 
 .desc-limited {
